styles.css
body {
    background-color: rgb(27, 26, 26);
    font-family: 'Arima Madurai', cursive;
    /*font-family:'Sacramento', cursive;*/
    font-size: 25px;
    --main-color: rgb(219, 235, 150);
    --main-bg: rgb(56, 57, 56);
    color: var(--main-color);
}

.container {
    display: grid;
    grid-template-rows: 250px 1fr;
    display: grid;
    grid-template-columns: 4fr minmax(200px, 1fr);
}

.header {
    align-self: center;
}

.body {
    display: grid;
}

.body {
    grid-template-rows: 1fr 1fr;
    align-items: start;
    grid-column: 1 / 2;
    grid-row: 2 / 3;
}

.side-bar {
    grid-column: 2 / 3;
    grid-row: 1 / 3;
    padding: 2rem;
    position: sticky;
    align-self: start;
    top: 0;
    right: 0;
}

.title,
.book-catalog {
    display: flex;
    justify-content: center;
    align-items: center;
}

.title {
    font-size: 65px;
    gap: 1.5rem;
    padding: 2rem;
    height: 120px;
}

.book-catalog {
    flex-direction: column;
}

.catalog-item {
    align-self: flex-start;
}

.title>img {
    width: 7.5rem;
    -webkit-filter: invert(98%) sepia(7%) saturate(1995%) hue-rotate(13deg) brightness(96%) contrast(91%);
    filter: invert(98%) sepia(7%) saturate(1995%) hue-rotate(13deg) brightness(96%) contrast(91%);
}

.book-library {
    border:solid 10px var(--main-bg);
    border-radius: 15px;
    grid-row: 1 / 3;
    display: grid;
    gap: 15px;
    grid-template-columns: repeat(auto-fill, minmax(20rem,1fr));
    padding: 15px;
    min-height: 22.5rem;
}

.book {
    display: grid;
    gap: 10px;
    height: 20rem;
    border: solid 10px;
    border-radius: 15px;
    padding: 10px;
}

.bookinfo {
    align-self: start;
}

.btn-container {
    justify-self: center;
    align-self: end;
    
}

form[name="book-form"] {
    box-sizing: border-box;
    margin: 0 auto;
    padding: 10px;
    display: grid;
    gap: 15px;
    justify-items: center;
}

input[type='text'] {
    padding: 10px;
    margin: 5px;
    border: none;
    border-bottom: solid 5px var(--main-color);
    font-size: 1rem;
    background-color: var(--main-bg);
    color: var(--main-color);
}

input[name="status"] {
    appearance: none;
    position: relative;
    width: 1em;
    height: 1em;
    border: 1px solid var(--main-color);
    background-color: var(--main-bg);
    border-radius: 50%;
}

input[name="status"]:checked {
    background-color: var(--main-color);
}

button[type='submit'] {
    font-family: inherit;
    font-size: 1.3rem;
    font-weight: bold;
    width: 10rem;
    height: 4rem;
    background-color: var(--main-bg);
    color: var(--main-color);
    border: solid 5px var(--main-color);
    border-radius: 15px;
}

button[type='submit']:hover {
    background-color: var(--main-color);
    color: var(--main-bg);
    border-color: var(--main-bg);
}

button[type='submit']:active {
    filter: brightness(50%);
}

.book-title {
    font-weight: bold;
    font-size: 2rem;
}

button.book-read,
button.book-unread,
button.delete-btn {
    font-family: inherit;
    font-size: 1.1rem;
    font-weight: bold;
    width: 8rem;
    height: 2rem;
    background-color: var(--main-bg);
    border-radius: 15px;
    display: block;
}

button.book-read {
    color: var(--main-color);
    border: solid 3px var(--main-color);
}

button.book-unread {
    color: rgba(231, 75, 75, 0.685);
    border: solid 3px rgba(231, 75, 75, 0.685);
}

button.delete-btn {
    color: rgb(209, 209, 209);
    border: solid 3px rgb(209, 209, 209);
    margin-top: 20px;
}

button.book-read:hover {
    background-color: var(--main-color);
    color: var(--main-bg);
    border: solid 3px var(--main-bg);
}

button.book-unread:hover {
    background-color: rgba(231, 75, 75, 0.685);
    color: var(--main-bg);
    border: solid 3px var(--main-bg);
}

button.delete-btn:hover {
    background-color: rgb(209, 209, 209);
    color: var(--main-bg);
    border: solid 3px var(--main-bg);
}

button.book-read:active,
button.book-unread:active,
button.delete-btn:active {
    filter: brightness(50%);
}

